@@ -1,3 +1,8 @@
+2008-06-10 13:15:29  Tim Janik  <timj@imendio.com>
+
+	* gtype.c (g_type_class_ref): fixed race condition where references to
+	partially initialized classes could be handed out.
+
 2008-05-28  Michael Natterer  <mitch@imendio.com>
 
 	* Makefile.am: don't define G_DISABLE_SINGLE_INCLUDES, it's in
